--- a/_posts/thesis_chapters/2025-6-6-Gdps_v3.md
+++ b/_posts/thesis_chapters/2025-6-6-Gdps_v3.md
@@ -11,13 +11,15 @@ categories: chapter
 title:  6. Findings - Game Design Patterns
 ---
 -   [Findings: Game Design Patterns](#findings-game-design-patterns)
-    -   [Research Questions April 2025](#research-questions-april-2025)
     -   [Introduction](#introduction)
+        -   [Framing GDPs within activity theory
+            concepts](#framing-gdps-within-activity-theory-concepts)
     -   [The role of GDPs in the personal appropriation of concepts and
         processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes)
         -   [The interrelationship of GDPs and the development of
             personal appropriation of skills and
             processes](#the-interrelationship-of-gdps-and-the-development-of-personal-appropriation-of-skills-and-processes)
+        -   [Summary of section](#summary-of-section)
     -   [GDPs used in the process of guided
         participation](#gdps-used-in-the-process-of-guided-participation)
         -   [Use of a menu of GDPs to assist project navigation and use
@@ -25,8 +27,8 @@ title:  6. Findings - Game Design Patterns
             documentation](#use-of-a-menu-of-gdps-to-assist-project-navigation-and-use-of-documentation)
         -   [GDPs used to scaffold ideation and prioritisation
             processes](#gdps-used-to-scaffold-ideation-and-prioritisation-processes)
-        -   [GDPs aiding the process of division of labour
-            (1400)](#gdps-aiding-the-process-of-division-of-labour-1400)
+        -   [GDPs aiding the process of division of
+            labour](#gdps-aiding-the-process-of-division-of-labour)
     -   [Use of GDPs in the cultural plane / community level of
         activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
         -   [The role of GDPs to facilitate learners to design for
@@ -64,6 +66,9 @@ title:  6. Findings - Game Design Patterns
                 NOW?](#move-later-just-a-signpost-to-later---park-for-now)
         -   [Implications for practitioners - MOVE
             LATER?](#implications-for-practitioners---move-later)
+    -   [Recently Dropped from
+        chapter.](#recently-dropped-from-chapter.)
+    -   [Footnotes](#footnotes)
 
 # Findings: Game Design Patterns
 
@@ -386,9 +391,7 @@ Bridge or close: One-line takeaway or link to next section -->
 
 In this section, I outline findings on the use of the use of GDPs within the group to mediate the process of accessing and using project project documentation.
 
-Chapter 5 described the introduction of a curated collection (menu) of gameplay design patterns to address the tension between participants' choice and the need for documentation to support the technical implementation of code structures. My design input here can be seen through the lens of Rogoff's  [@rogoff_observing_1995] three planes interpretation as a form of guided participation [^cgp].
-
-
+Chapter 5 described the introduction of a curated collection (menu) of gameplay design patterns to address the tension between participants' choice and the need for documentation to support the technical implementation of code structures. My design input here can be seen through the lens of Rogoff's  [@rogoff_observing_1995] three planes interpretation as a form of guided participation [^cgp]. (DEVELOP SLIGHTLY OR DROP)
 
 The following extract from Vignette 2 concerns a family that had taken a methodical approach to accessing documentation. In the minutes leading up to extract, Susanna (parent) attempting to implement a key and door mechanic to the game. Meanwhile Tehillah (child), unable to do such coding or debugging, expressed boredom [^kd]. Susanna(p) [^ip] had been following the step-by-step written instructions but when Susanna had not been able to progress, she sent Tehillah(c) to get my help and I worked with her to find the problem.
 
@@ -415,14 +418,16 @@ To prioritise participant engagement, supporting documentation avoided a princip
 
 This choice provided over which pattern to implement appears to have a positive impact on affect. Tehillah(c)'s choice over which GDPs they tackle has helped create a personal connection to the game. Her positive reaction in the vignette above, including the naming and rhythmical chanting of “key” and “door,” indicates affective engagement closely tied to her interaction with the GDP concept. There is also evidence of affective engagement in Toby's laughter and calling out to his Granny when getting unexpected results.
 
-I provided participants with a choice of supporting documentation in the form of both step-by-step instructions and code snippets. While both forms of documentation following the structure of close coupling between impact and that is core to the use of design patterns in computing education [@gamma], this decision resulted in varied patterns of use. In the Vignette 1 extract above, Toby uses the graphical menu of patterns as a starting point to help him to choose, find and implement a GDP feature using supporting code snippets directly. Thus in contrast to Vignette 2, he does not access the step by step instructions.  
+While both forms of documentation following the structure of close coupling between impact and that is core to the use of design patterns in computing education [@gamma_design_1995], this decision resulted in varied patterns of use.  I provided participants with a choice of supporting documentation in the form of both step-by-step instructions and code snippets. In the Vignette 1 extract above, Toby uses the graphical menu of patterns as a starting point to help him to choose, find and implement a GDP feature using supporting code snippets directly. Thus in contrast to Vignette 2, he does not access the step by step instructions.
+
+
 
 <!-- Later Toby is able to assist others in adding GDPs to their games [^rc2]. POTENTIALLY DROP THIS / MOVE -->
 **Commentary**
-In my use of gamePLAY design patterns the coupling is more tangible still for participant experience. the impact in the game is very relatable. LINK TO CH. 7 and LATER FOK
-This extends current research in this area. HOW ? SUMMARY
 
-While the evidence supports the potential of a menu of GDPs to address the tensions between choice-based approaches and the danger of a lack of relevant scaffolding, there are some important clarifications to make at this point. Firstly, not all participants engage with this menu. For example, in Vignette 3, Ed lets his father take the lead in accessing documentation. Other individuals learn to implement GDPs from peers, a process explored in a later section. Secondly, because the GDP menu (and concepts) were introduced by myself as a navigational and organisational tool for use by participants, it seems logical that participants should use them for that purpose. The danger here is of circular reasoning in methodology which needs to be borne in mind when assessing the scope of this research [^gp]. Despite these clarifications, the data clearly shows the utility of the menu of GDPs to directly help some participants, a clear example of just-in-time documentation supporting participant-led learning and as a foundational source for the later propagation and evolution of GDP practices by participants.
+While the evidence outlined supports the potential of a menu of GDPs to address the tensions between choice-based approaches and the danger of a lack of relevant scaffolding, there are some important clarifications to make at this point. Firstly, not all participants engaged with the menu of . For example, some participants learn to implement GDPs from peers, a process explored in a later section. Additionally, in Vignette 3, we see Ed lets his father take the lead in accessing documentation.  Secondly, because the GDP menu (and concepts) were introduced by myself as a navigational and organisational tool for use by participants, it seems logical that participants should use them for that purpose. The danger here is of circular reasoning in methodology which needs to be borne in mind when assessing the scope of this research [^gp]. Despite these clarifications, the data clearly shows the utility of the menu of GDPs to directly help some participants, a clear example of just-in-time documentation supporting participant-led learning and as a foundational source for the later propagation and evolution of GDP practices by participants.
+
+These observations extends current research in this area in relation to the promising work on computational thinking patterns within the scalable game design (SGD) programme. The structure of SGD and supporting resources was oriented around  the motivation of transferability of science simulation concepts (in pattern form) to other science disciplines. By way of contrast, in my research the motivation is to align the structure documentation to the choices of desired game features made by earlier iterations of participants. In this way project navigation increasing the relatability of the patterns at play. The use of gameplay design patterns [^gpdp] facilitates a tangible coupling between the participant experience of the pattern and the process of implementing it.
 
 
 ### GDPs used to scaffold ideation and prioritisation processes
@@ -430,43 +435,37 @@ While the evidence supports the potential of a menu of GDPs to address the tensi
 <!-- Other techniques that leveraged the characteristics of game design patterns to support the ideation process emerged in community design activities. -->
 <!-- NOTE - ADD MORE ON GESTURING  -->
 
-This section outlines how the use of GDP concepts and supporting tools were used in ideation and project organisation.
-
-Chapter 5 outlined the impact of the provision of the menu of GDPs significantly decreased in time spent in the ideation phase by providing scaffolding and restricting choice. DID IT OR DO IT HERE?
+This section outlines how the use of GDP concepts and supporting tools were used in ideation and project organisation. The impact of the provision of the starter game template and menu of GDPs outlined in Chapter 5 changed the nature of the ideation phase by providing scaffolding and restricting choice.
 
 
-An exchange from Vignette 3 between participants Ed(c) and Mark(p) shows the use of GDP concepts to help resolve a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise work more systematically. The pair's initial listing of features is a brainstorming technique using the approximate names of game design patterns (_get the person animated_, _get an enemy in_, _changing the platforms_, _make a theme tune_). Mark (p) becomes _overwhelmed_ with the child's lack of focus on one pattern "_that’s what I mean, you can’t just skip around like that_." [^v3]
+An exchange from Vignette 3 between participants Ed(c) and Mark(p) shows the use of GDP concepts to help resolve a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise work more systematically. The pair's initial listing of features is a brainstorming technique using the approximate names of game design patterns (_get the person animated_, _get an enemy in_, _changing the platforms_, _make a theme tune_). Mark becomes _overwhelmed_ with the child's lack of focus on one pattern "_that’s what I mean, you can’t just skip around like that_." [^v3]
 
-In a session in P3, Toby uses the code based tilemap tool to design a maze game instead of a platformer game drawing on existing knowledge of tools and home knowledge of the target game genre to rapidly make revisions without extensive planning [^v6]. This use of GDPs to allow the spacial exploration of design in a visual and intuitive way suits being mapped onto paper, or onto graphical software which allows for a similarly rapid prototyping. By way of contrast, other pairs take advantage of paper prototyping. For example, Susanna notices her child's difficulty in using cursor and delete/backspace keys to edit a matrix allowing level design. The parent provides a book with grid paper to allow the child to replicate the matrix. The parent is then able to transcribe the design to the code example while engaging the child by checking she has interpreted the design correctly. Interview data with Mark and Ed uncovers complexities in the use of both digital and paper prototyping of related to GDPs explored in more detail in Appendix.tech.prototyping.
-WHY IMPORTANT?
+
+
+This use of GDPs to allow the spacial exploration of design in a visual and intuitive way suits being mapped onto paper, or onto graphical software which allows for a similarly rapid prototyping. In a session in P3, Toby uses the code based tilemap tool to design a maze game instead of a platformer game drawing on existing knowledge of tools and home knowledge of the target game genre to rapidly make revisions without extensive planning [^v6].
+
+Other pairs take advantage of paper prototyping. For example, Susanna notices her child's difficulty in using cursor and delete/backspace keys to edit a matrix allowing level design. The parent provides a book with grid paper to allow the child to replicate the matrix. The parent is then able to transcribe the design to the code example while engaging the child by checking she has interpreted the design correctly. Interview data with Mark and Ed uncovers complexities in the use of both digital and paper prototyping of related to GDPs [^pp].
 
 
 The following exchange (Table 6.x) captures a moment where the GDP concepts are used to structure a ideation proposing a more radical change of underlying game genre.
 
 | **Dialogue** | **Activity / Notes / Gestures** |
 |--------------|----------------------------------|
-| Dan: Have you thought about pushing it a bit further and have a different style of game?<br>Toby: What do you mean? |  |
+| Dan (p): Have you thought about pushing it a bit further and have a different style of game?<br>Toby(c): What do you mean? |  |
 | Dan: Well the previous style of game was a platform game wasn’t it? You went along and there was gravity pushing down. There are other types of games aren’t there? | Dan makes shape with hands to indicate a platform. Then points downwards to indicate gravity pushing on that platform. Mimics player jumping between platforms. |
 | Toby: Pause. I don’t know what to do though.<br>Dan: Well quite, but what other games are there?<br>Toby: I don’t know er.<br>Dan: Well I tell you what... (muffled)<br>Toby: Erm | Toby navigates to webpage menu of GDPs. |
 | Dan: So. You played them before didn’t you?<br>Toby: What do you mean?<br>Dan: The flying game, that’s a different kind of game.<br>Toby: Oh, like kind of like moving along kind of thing. | Toby moves hand left to right. |
 | Dan: Yeah, and there are games where you are in a world and you have to move around the world like Pac-Man. | Dan points down and moves finger around like an imaginary character moving at right angles. Toby nods. |
 | Dan: There are games where things drop down like Tetris.<br>Toby: …game. You could have a game where every 15 seconds, 10 seconds, you could add an enemy to such and such, a random number between such and such. You could block it somewhere. | Dan makes a shape with hand and moves it up and down. Toby holds up hands to indicate a range of parameters as he says “between such and such.” |
-| Dan: So instead of... instead of the world… the world being sideways, we could have the world being looked down on. | Dan reindicates the change of perspective with hand gestures. |
+| Dan: So instead of... instead of the world… the world being sideways, we could have the world being looked down on. | Dan re-indicates the change of perspective with hand gestures. |
 | Toby: Hmm. How should I do this then?<br>Dan: That’s a good question. Shall we ask Mick to see if that would mess things up or not? |  |
 
 
-
-In the vignette extract above, home-based knowledge of GDP mechanics is utilised on an interpersonal plane, with Dan(p) helping Toby(c) via guided facilitation to provoke and shape new design ideas. Dan(p) draw on the game playing experiences to promote innovation in the design of the existing template: _"the previous style of game was a platform (makes shape with hands) game wasn't it? You went along and there was gravity pushing down. There are other types of games aren't there?"_ The pair use their knowledge of game play patterns and genre conventions to break out of the genre constraints of starting template.  Here they are charting new territory beyond the curated choices of GDPs and as such may not have vocabulary to express concepts. Both Dan and Toby make extensive use of gestures in their interaction reinforces their spoken references to GDP concepts.
-
 **Commentary**
 
-The use of GDPs as a lingua franca as proposed by Erickson and colleagues [-@erickson_lingua_2000; -@eriksson_using_2019]
+In the vignette extract above, home-based knowledge of GDP mechanics is utilised on an interpersonal plane, with Dan(p) helping Toby(c) via guided facilitation to provoke and shape new design ideas. Dan draws on the game playing experiences to promote innovation in the design of the existing template: _"the previous style of game was a platform (makes shape with hands) game wasn't it? You went along and there was gravity pushing down. There are other types of games aren't there?"_ The pair use their knowledge of game play patterns and genre conventions to break out of the genre constraints of starting template.  Here they are charting new territory beyond the curated choices of GDPs and as such may not have vocabulary to express concepts. Both Dan and Toby make extensive use of gestures in their interaction reinforces their spoken references to GDP concepts.
 
-**Link**
-
-This section has addressed use of GDPs within ideation, specifically as a lingua franca, as a visual prototyping tool, and within participant gestural interaction.
-
-
+The use of GDPs as a lingua franca as proposed by Erickson [-@erickson_lingua_2000] and Erikisson [-@eriksson_using_2019] (two different researchers) who detail the verbal use of GDP terms by participants in a collaborative design process. The observations of this section support the proposals of the  utility of collective, emergent use of pattern languages within communities working on projects. Here, they show specfically the potential for GDPs to be within ideation, prioritisation and clarification. In addition they show that as well as a verbal lingua franca, GDPs can be a valuable component of gestural interaction, and visually-oriented prototyping tools, be they digital or paper based.
 
 <!-- IS SOME SYNTHESIS NEEDED TO END THIS SECTION? -->
 
@@ -495,7 +494,7 @@ Ed: Yeah. I think I want to get an enemy in - oh no - my person animated.
 Mark: So you want to get your person animated that’s the main thing.
 Mark: Shall we concentrate on that and changing the platforms into something different? -->
 
-### GDPs aiding the process of division of labour (1400)
+### GDPs aiding the process of division of labour
 
 <!-- NOTE - DIVISION OF LABOUR IS IN THE NEXT CHAPTER TOO - REWRITE BASED ON GDP ONLY CONTENT
 CHECK FOR OVERLAP-->
@@ -749,7 +748,7 @@ Other characteristics and norms of the emerging idioculture stemming which stem 
 
 This discussion section discusses the complexity of the expanded object of activity and the diverse mediational uses of GDPs using a activity theory as a framework. It summarises the different uses of GDPs and notes the limitations of 3GAT to represent such diversity of mediational strategies.  
 
-This discussion begins to address the challenge of communicating the diverse mediational strategies , suggesting SDBE's concept of repertoires (and signposting a more accessible and practical conceptual model).
+This discussion begins to address the challenge of communicating the diverse mediational strategies and the movement of repertoires between activity systems.
 
 I then turn to the motivations and a synthesis  of an expanded concept of the object of activity involved. My attention returns to concepts of flow and computational fluency present in CGD&P research, suggesting an extension to include developing concepts of agency in the process.
 
@@ -1326,6 +1325,10 @@ Returning to Kynigos's interpretation of the half-baked game as a boundary objec
 [^gp]: My input into the structuring of the menu of GDPs and the supporting documentation is also relevant as a factor in guided participation.
 
 [^v3]: For a fuller transcript and a reflective commentary of this exchange see Vignette 3.
+
+[^gpdp]: See Chapter 2 for a disambiguation of design patterns oriented to code structure or towards resulting behaviours in the end product. Here gameplay design patterns would be recognised by players.
+
+[^pp]: Extracts from this interview and commentary on the use of diverse ways of prototyping game design patterns is explored in more detail in Appendix C.proto .
 
 <!-- STRUCTURE VIA THIS MINI TEMPLATE
 
