--- a/_posts/thesis_chapters/2025-6-6-Gdps_v3.md
+++ b/_posts/thesis_chapters/2025-6-6-Gdps_v3.md
@@ -502,21 +502,34 @@ CHECK FOR OVERLAP-->
 <!-- NOTE  dol and identities.
 Skills to perform these activities were at often distributed between different family members. For some adult re-enforcing their identities as project managers, and for young participants forming identities as digital specialists.  -->
 
-Addressing division of labour on an interpersonal plane, participants worked mostly as pairs or individuals, alternating between community playtesting and pair/individual design work. An overarching feature of the use of GDPs at this level, in line with existing research on design patterns [@erickson_lingua_2000; @eriksson_using_2019], was a lingua franca. The use of GDP concepts to construct shared language and understanding was found in video data in varied forms related in particular to division of labour between participants.
+I now turn to the use of GDPs within processes of division of labour, a process which as in the previous section involved their use in an emergent form of communication to construct shared language and understanding [@erickson_lingua_2000].  As with previous sections, I begin with data in the form of vignette extracts and additional description and proceed to commentary and discussion in relation to relevant research.
 
-In addition, the use of GDPs as an organisational strategy, structuring work processes through implementing modular sub-projects in the form of GDPs can aid division of labour. GDPs feature in processes division of labour in a variety of ways: working knowledge of different types of GDPs can help participants to divide work by working on different patterns or taking on project elements within patterns.
+<!-- The examples below illustrate part of some of the varied strategies to divide labour adopted by participants at times involving complex tensions in activity.  -->
 
-The examples below illustrate part of some of the varied strategies to divide labour adopted by participants at times involving complex tensions in activity. Data uncovered  ways in which the participant divided the process of game making, in ways which uncovered traces of home collaboration practices. For example, In Vignette 2, Susanna(p) and Tehillah(c) relied on the parent to do the majority of code implementation but shared one computer. The parent took a lead on many activities but took care that they alternated between use of keyboard and mouse to give the child hands on experience when possible, particularly in level design activities and playtesting (see V2.7). In interview data (see V2.b), the parent notes _"I resist the urge to fix things immediately when she struggles."_  In another exchange (see), Tehillah (c) uses the name of a GDP within a request for her parent to take on a specific task within their making process, "Go on then. Key-Door person." When the parent expresses confusion Tehillah gestures with her hands to indicate that her mother is the person she is referring to. The child appears to consider the level of complexity needed to add a new pattern into the code to be beyond her ability and thus directly delegate the task to her mother. At times Susanna(p) asked Tehillah(c) to seek help from facilitator (V2.1). On another occasion when the child appeared bored of waiting for parent to solve a code problem, she approached the facilitator to ask for help on behalf of the adult without prompting. At other times Tehillah(c) engages more peripheral activities such as watching older children playtest each others games, or observing community activity from under the table.
+Susanna(p) and Tehillah(c) relied on the parent to do the majority of code implementation but shared one computer. The parent took a lead on many activities but took care that they alternated between use of keyboard and mouse to give the child hands on experience when possible, particularly in level design activities and playtesting [^st1]. In interview data, the parent notes _"I resist the urge to fix things immediately when she struggles."_  Another exchange from Vignette 2 is described below.  
 
-Madiha's(p) family Nasrin(c) and Zidane(c) are all working on separate games on different computers. While Madiha sits next to Zidane who needs closer support, Nasrin often sits close by but next to a friend. In Vignette 5, as part of her process of building an emerging identity as a graphical asset designer (see V5.b), Madiha calls across the room to draw on Nasrin's help to correct a design mistake. Nasrin affects reluctance in her support of her mother (see V5.a), but at other times shows that she enjoys her status of technical supporter (see V5.d). Nasrin appears reluctant to explain the technical processes she uses to help her mother:  
+    Tehillah(c) uses the name of a GDP within a request for her parent to take on a specific task within their making process, "Go on then. Key-Door person." When the parent expresses confusion about what this stateent means, Tehillah gestures with her hands to indicate that her mother is the person she is referring to. The child appears to consider the level of complexity needed to add a new pattern into the code to be beyond her ability and thus directly delegate the task to her mother.
 
-*"Madiha (to Nasrin): What are you doing? You have to tell me what you are doing so I can do it myself."* This may be driven by a desire to preserve this specialist status and utility to her mother. Madiha and Nasrin reversed the traditional helping relationship, and the child would reluctantly implement the parent's requested technical elements of GDPs but would pointedly not explain the changes made, seemingly taking pride in knowing something that her mother didn't.
+At times Susanna asked Tehillah to seek help from facilitator. On another occasion when the child appeared bored of waiting for parent to solve a code problem, she approached the facilitator to ask for help on behalf of the adult without prompting. At other times Tehillah engages more peripheral activities such as watching older children playtest each others games, or observing community activity from under the table.
 
 
+Madiha's(p) family Nasrin(c) and Zidane(c) are all working on separate games on different computers. While Madiha sits next to Zidane who needs closer support, Nasrin often sits close by but next to a friend. The following is and extract from  Vignette 5,
 
-<!-- (CHECK INTERVIEW DATA) -->
+    Madiha calls across the room to draw on Nasrin's help to correct a design mistake.  Nasrin appears reluctant to explain the technical processes she uses to help her mother:  "Madiha (to Nasrin): What are you doing? You have to tell me what you are doing so I can do it myself."  
 
-<!-- Toby and Dan's pair process of accessing professional documentation also illustrated an aspect of their family learning culture.  -->
+Madiha and Nasrin reversed the traditional helping relationship, and the child would reluctantly implement the parent's requested technical elements of GDPs but would pointedly not explain the changes made, seemingly taking pride in knowing something that her mother didn't.
+
+Madiha as part of her process of building an emerging identity as a graphical asset designer (see V5.b),
+Nasrin affects reluctance in her support of her mother, but at other times shows that she enjoys her status of technical supporter (see V5.d). This may be driven by a desire to preserve this specialist status and utility to her mother.
+
+In Vignette 3, Mark(p) and Ed(c) break out of a dysfunctional division of labour in the penultimate P2 session [^pl].  
+
+For much of the first part of the session Mark takes a significant amount of time puzzling over documentation on how to add animation to a character. This results in Ed being blocked from progressing and to address this tension child proposes dividing their labour and working on two separate computer. "Ed: Why don’t you go there for a computer and you can do that?". A BIT MORE DIALOG - WHAT WILL D YOU DO?  Mark fetches a new computer to continue his focused research but soon joins in Ed(c)'s exploration of sound-making software. They start a process of tinkering and messing about with the capability of music-making tools in a way that spurs creativity.
+
+Ed appears to make a tactical decision allowing the father to specialise in GDPs that involve deciphering technical instructions, whilst he engages with a pattern that involves creating audio and graphical assets in a less technical, more exploratory process. In doing so Ed(c) break out of the more restrictive approach of _plodding_ that Mark(p) advocated for to engage in experimental, improvised design processes with no clear end goal.
+
+In this case, the joint improvised process sparks a new proposal to incorporate the two soundtracks they create in distinct levels.
+
 
 
 
@@ -526,23 +539,39 @@ Toby adopts different working arrangements dependent on which family members he 
 
 <!-- **Leveraging the possibilities of emerging divisions of labour** -->
 
-While the context of the participants as families involved in home education makes any general claims difficult, these observations support findings in other research in this domain. For example, research shows that children have the potential to help parents as technology brokers [@correa_brokering_2015]. In joint technology work, parents can fulfil several reciprocal roles including collaborator, resource provider, learner, non-technical consultant, and emotional support [@barron_parents_2009].
+
+Toby and Dan's pair process is more guided and focused than many other participants and includes accessing professional documentation and exploration of computational thinking concepts.
+
+
+
+
+
+
+
+**Commentary**
+Turning now to commentary and discussion we can see the emergence of several themes in the examples above.  
+A list?  including: working knowledge of different types of GDPs can help participants to divide work by working on different patterns or taking on project elements within patterns.
+
+Addressing division of labour on an interpersonal plane, participants worked mostly as pairs or individuals, alternating between community playtesting and pair/individual design work.
+
+The use of GDPs as an organisational strategy, structuring work processes through implementing modular sub-projects in the form of GDPs can aid division of labour.
+
+Data uncovered  ways in which the participant divided the process of game making, in ways which uncovered traces of home collaboration practices.
+For example, Toby and Dan's pair process of accessing professional documentation also illustrated an aspect of their family learning culture.
+
+While Tehillah's activity away from the screen  while non-productive within the scope of technical progress, can be characterised as legitimate peripheral activity of observation of community activity [@lave_situating_1991 ; @rogoff_learning_2014].  Indeed the possibility for children to _not_ engage in community activities is seen by Rogoff [-@rogoff_cultural_2003; -@rogoff_organization_2016] as an important characteristics in participation based models of learning.
+
+
+For example, research shows that children have the potential to help parents as technology brokers [@correa_brokering_2015]. In joint technology work, parents can fulfil several reciprocal roles including collaborator, resource provider, learner, non-technical consultant, and emotional support [@barron_parents_2009].
 
 Thus, in response to the creative support that parents and siblings provide, facilitators should design learning environments to facilitate these possibilities. The work of Roque provides guidance for helpers in the process to support parents to value and feel confident in these roles [@roque_im_2016] in a way which mirrors the use of helpers in this phase of my study (see Chapter 4).
 
 
 The variety of repertoires of helping practice depends in part on the different funds of knowledge the parent has access to. The helping pattern of researching and accessing technical documentation is not available to all pairs, due to the level of skill and experience involved.
 
-Toby and Dan's pair process is more guided and focused than many other participants and includes accessing professional documentation and exploration of computational thinking concepts.
+**qualifications**
+While the context of the participants as families involved in home education makes any general claims difficult, these observations support findings in other research in this domain.
 
-
-
-While Tehillah's activity away from the screen  while non-productive within the scope of technical progress, can be characterised as legitimate peripheral activity of observation of community activity [@lave_situating_1991 ; @rogoff_learning_2014].  Indeed the possibility for children to _not_ engage in community activities is seen by Rogoff [-@rogoff_cultural_2003; -@rogoff_organization_2016] as an important characteristics in participation based models of learning.
-
-In Vignette 3 (V3.a), Mark(p) repeatedly steers Ed(c) to pick one GDP to allow them to carefully work through the associated documentation together, a process he later refers to in interview data (Interview ) as _plodding_ . Early in that session Mark takes a significant amount of time puzzling over documentation on how to add animation to a character. This results in Ed being blocked from progressing and to address this tension child proposes dividing their labour and workig on two separate computer (see V3.9 _"Why don’t you go there for a computer and you can do that?"_). Ed appears to make a tactical decision allowing the father to specialise in GDPs that involve deciphering technical instructions, whilst he engages with a pattern that involves creating audio and graphical assets in a less technical, more exploratory process.
-
-MOVED - INTEGRATE IN
-In Vignette 3 (see 3.c in particular), we see Ed(c) break out of the more restrictive approach of plodding that Mark(p) advocated for to engage in experimental, improvised design processes with no clear end goal. Mark (p) later joins in Ed(c)'s exploration of sound-making software. They start a process of tinkering and messing about with the capability of music-making tools in a way that spurs creativity. In this case, the joint improvised process sparks a new proposal to incorporate the two soundtracks they create in distinct levels.
 
 <!-- While these following observations are more generally inked to the overall design process rather than the specific note they are of value to RQ2 on developing agency. -->
 
@@ -1330,9 +1359,13 @@ Returning to Kynigos's interpretation of the half-baked game as a boundary objec
 
 [^pp]: Extracts from this interview and commentary on the use of diverse ways of prototyping game design patterns is explored in more detail in Appendix C.proto .
 
+[^st1]: An example of this transfer is in the vignette extract earlier in the chapter  in Table 6.x. A fuller description is in Vignetted 2.
+
+[^pl]: Mark(p) repeatedly steers Ed(c) to pick one GDP to allow them to carefully work through the associated documentation together, a process he later refers to in interview data  as _plodding_ . See interview extract in Vignette 3.
+
 <!-- STRUCTURE VIA THIS MINI TEMPLATE
 
-Mini-intro: What’s being explored and why it matters
+Mini-intro: What’s being explored and why S it matters
 Empirical evidence: Table or vignette extract
 Interpretation: What it shows (use, affect, interaction)
 Variation: What didn’t happen or where it differed
